Change project name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hyre_admin_frontend",
+  "name": "hure_admin_frontend",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
