--- a/package.json
+++ b/package.json
@@ -4,15 +4,18 @@
   "private": true,
   "dependencies": {
     "@apollo/react-hooks": "^3.1.3",
+    "@date-io/date-fns": "1.x",
     "@material-ui/core": "^4.9.1",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.42",
+    "@material-ui/pickers": "^3.2.10",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "apollo-boost": "^0.4.7",
     "axios": "^0.19.2",
     "clsx": "^1.1.0",
+    "date-fns": "^2.10.0",
     "graphql": "^14.6.0",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
