--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "clsx": "^1.1.0",
     "date-fns": "^2.10.0",
     "graphql": "^14.6.0",
+    "moment": "^2.24.0",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
